--- a/jquery/ljQuery.html
+++ b/jquery/ljQuery.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   
-  <script src="lQuery.js"></script>
+  <script src="./ljQuery.js"></script>
+  <script>
+    console.log($('  <p></p><p></p><p></p>'))
+  </script>
 </body>
 </html>
