--- a/jquery/ljQuery.html
+++ b/jquery/ljQuery.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>lQuery</title>
 </head>
+
 <body>
-  
+
+  <ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+  </ul>
+
   <script src="./ljQuery.js"></script>
   <script>
-    console.log($('  <p></p><p></p><p></p>'))
+    // 真伪数组 
+    // var obj = { 1: '11', 2: '22', 3: "44", length: 3 };
+    // var arr = [].slice.call(obj);
+    // console.log(arr)
+    // console.log($('  <p></p><p></p><p></p>'))
+
+    // var a = ['1','2','3'];
+    console.log($(''))
+
   </script>
 </body>
+
 </html>
